[package]
name = "libsui"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A injection tool for executable formats (ELF, PE, Mach-O) that allows you to embed files into existing binary and extract them at runtime"
homepage = "https://sui.littledivy.com"
repository = "https://github.com/littledivy/sui"

[dependencies]
libc = "0.2"
editpe = { version = "0.1.0", default-features = false }
# object = { version = "0.36.1", features = ["build"] }

[lib]
path = "lib.rs"

[[bin]]
name = "sui"
path = "cli.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_Foundation"] }
