[package]
name = "libsui"
version = "0.2.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
description = "A injection tool for executable formats (ELF, PE, Mach-O) that allows you to embed files into existing binary and extract them at runtime"
repository = "https://github.com/denoland/sui"

[dependencies]
libc = "0.2"
editpe = { version = "0.1.0", default-features = false }
zerocopy = { version = "0.7", features = ["derive"] }
sha2 = "0.10"

# object = { version = "0.36.1", features = ["build"] }

[lib]
path = "lib.rs"

[[bin]]
name = "sui"
path = "cli.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_Foundation"] }
